--- a/_sass/styles.scss
+++ b/_sass/styles.scss
@@ -6,23 +6,34 @@
 
 // Custom styles
 .p-navigation__banner {
-    background-color: $ubuntu-orange;
-  }
-  
-  .p-navigation__logo {
-    font-weight: 400;
-    margin-right: $sph-inner--large;
-  
-    @media only screen and (max-width: $breakpoint-medium) {
-      margin-bottom: -12px;
-      margin-top: 12px;
-      max-height: 3rem;
+  background-color: $ubuntu-orange;
+}
+
+.p-navigation {
+  .p-navigation__row {
+    padding: 0;
+
+    .p-navigation__banner {
+      padding: 0 $sph-inner--large;
+
+      .p-navigation__logo {
+        font-weight: 400;
+        margin-right: 0;
+        
+      }
+
+      .p-navigation__toggle {
+        &--open,
+        &--close {
+          font-weight: 400;
+        }
+      }
+    }
+    
+    .p-navigation__link a {
+      height: 100%;
+      padding-left: $sph-inner--large ;
+      padding-right: $sph-inner--large ;
     }
   }
-  
-  .p-navigation__toggle {
-    &--open,
-    &--close {
-      font-weight: 400;
-    }
-  }
+}
