--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -79,6 +79,7 @@
             <a class="p-link--external" href="https://discourse.ubuntu.com/search?q=etclite">Discourse</a>
           </li>
           <li class="p-navigation__link" role="menuitem">
+            <!-- Change link! -->
             <a class="p-link--external" href="https://github.com/canonical-web-and-design/etclite.io">Code</a>
           </li>
           <li class="p-navigation__link" role="menuitem">
@@ -86,14 +87,6 @@
           </li>
         </ul>
       </nav>
-      <div class="p-navigation__logo u-hide--small">
-        <a class="p-navigation__link" href="https://github.com/canonical-web-and-design/etclite.io">
-          <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/cb4b9125-github-white.svg" alt="" height="32px"/>
-        </a>
-        <a class="p-navigation__link" href="">
-          <img class="p-navigation__image" src="https://assets.ubuntu.com/v1/00f06e1d-twitter-social.svg" alt="" height="32px"/>
-        </a>
-      </div>
     </div>
   </header>
   {{content}}
