--- a/src/_includes/base.html
+++ b/src/_includes/base.html
@@ -90,7 +90,7 @@
     </div>
   </header>
   {{content}}
-  <script src="/js/build/global-nav/global-nav.js"></script>
+  <script src="/js/build/global-nav.js"></script>
 	<script>canonicalGlobalNav.createNav({maxWidth:"72rem"});</script>
 </body>
 
